# silicube

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE  README.md  flake.nix  toolchain.nix
crates/silicube/: Cargo.toml  README.md  silicube.example.toml
crates/silicube-cli/: Cargo.toml  README.md
crates/silicube-cli/src/: main.rs
crates/silicube/src/: lib.rs  types.rs
crates/silicube/src/config/: language.rs  loader.rs  mod.rs
crates/silicube/src/isolate/: box_manager.rs  command.rs  meta.rs  mod.rs  process.rs
crates/silicube/src/runner/: compile.rs  execute.rs  interactive.rs  mod.rs
crates/silicube/tests/: integration.rs
crates/silicube/tests/fixtures/configs/: invalid_empty_extension.toml  invalid_empty_name.toml  invalid_empty_run_command.toml  invalid_extension_with_dot.toml  valid_full.toml  valid_minimal.toml
crates/silicube/tests/fixtures/sources/: compile_error.cpp  echo.cpp  infinite_loop.cpp  interactive_echo.py  memory_hog.cpp  multi_step_quiz.cpp  runtime_error.cpp  segfault.cpp  staggered_prompt.cpp  staggered_prompt.py
crates/silicube/tests/integration/: compilation.rs  compile_and_run.rs  config_loading.rs  execution.rs  interactive_execution.rs  main.rs  meta_file_fixtures.rs  resource_limits.rs  sandbox_lifecycle.rs
docker/: default.nix  isolate.nix  jdk-minimal.nix  test.nix
scripts/: run-silicube.sh  run-tests-nix.sh  run-tests.sh
