[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/silicube-cli"]

[workspace.package]
name = "silicube"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/r2rn/silicube"

[workspace.dependencies]
silicube = { path = "crates/silicube", version = "0.2.0" }

anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
config = "0.15"
proptest = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
