[package]
name = "silicube"
description = "A library for sandboxed code execution"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
config.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
proptest.workspace = true

[features]
default = []
# Enable integration tests that require the isolate binary
integration-tests = []

[[test]]
name = "integration"
path = "tests/integration/main.rs"
